--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,10 @@
       "scripts": ["index.js"],
       "persistent": false
     },
+    "browser_action": {
+    "default_icon": "logo.png",
+    "default_title": "EntRating",
+    "default_popup": "popup.html"
+    },
     "manifest_version": 2
 }
